--- a/index.html
+++ b/index.html
@@ -843,7 +843,7 @@ style="margin-center: 10px;width:100px;height:100px;" />
 </ul>
 <h1 id="unreal-engine">Unreal Engine</h1>
 <ul>
-<li><a href="https://duckduckgo.com">Spline Plus</a>   </li>
+<li><a href="https://elseforty.github.io/unreal/">Spline Plus</a>   </li>
 </ul>
                 
                   
