--- a/SplinePlus/SplineEdit/index.html
+++ b/SplinePlus/SplineEdit/index.html
@@ -998,7 +998,7 @@
                   <h1>Spline</h1>
                 
                 <p>Spline editing actions are done through the items menu, right click in your scene view to open the items menu.<br />
- <img src="../images/BranchEditing.png"
+ <img src="../images/SplineItemsMenu.png"
 alt="Markdown Monster icon"
 style="margin-center: 10px; height: 150px" /> </br></p>
 <h2 id="snap-to-grid">Snap To Grid</h2>
