--- a/MeshDeform/Inspector/index.html
+++ b/MeshDeform/Inspector/index.html
@@ -700,10 +700,11 @@
 <li>Processing: CPU Single thread - CPU Muli threading - GPU.    </li>
 <li>Translation, rotation, scale with randomization.   </li>
 <li>Node Scale  (Taper effect).  </li>
-<li>Node Normal.  </li>
+<li>Node Normal (Bend effect).  </li>
 <li>Mirroring.   </li>
 <li>Mesh trimming.  </li>
 <li>Copy/Past/Duplicate prefab meshes between branches.</li>
+<li>Export mesh generated as a Unity prefab.  </li>
 <li>API to generate procedural mesh at runtime.  </li>
 </ul>
 <h2 id="inspector">Inspector</h2>
@@ -835,6 +836,14 @@ style="margin-left: 10px; width : 450px" />
 <tr>
 <td>Copy/Past</td>
 <td>Copy the selected prefab mesh. </br> To past the copied prefab mesh, right click on an empty area in the prefab meshes section.</td>
+</tr>
+<tr>
+<td>Clear All</td>
+<td>Remove all prefab meshes added.</td>
+</tr>
+<tr>
+<td>Export</td>
+<td>Export the Unity prefab.</td>
 </tr>
 </tbody>
 </table>
