--- a/Extrude/Inspector/index.html
+++ b/Extrude/Inspector/index.html
@@ -646,8 +646,9 @@ style="margin-left: 10px; width : 700px" />
 <li>Correct Uvs, tangents, normals  generation.  </li>
 <li>UVs rotation  </li>
 <li>Extruded mesh generation on all spline branches  </li>
-<li>Node normal.  </li>
+<li>Node normal (Bend effect).  </li>
 <li>Node Scale (Taper effect).  </li>
+<li>Export mesh generated as a Unity prefab.  </li>
 </ul>
 <h2 id="inspector">Inspector</h2>
 <p><img src="../images/Inspector.png"
@@ -693,6 +694,10 @@ style="margin-left: 10px; width : 450px" />
 <tr>
 <td>Uv Rotation</td>
 <td>Rotate the extruded mesh Uvs.</td>
+</tr>
+<tr>
+<td>Export Prefab</td>
+<td>Export the Unity prefab.</td>
 </tr>
 </tbody>
 </table>
