--- a/PlaneMesh/Inspector/index.html
+++ b/PlaneMesh/Inspector/index.html
@@ -646,8 +646,9 @@ style="margin-left: 10px; width : 700px" />
 <li>Correct Uvs, tangents, normals  generation.  </li>
 <li>UVs rotation.  </li>
 <li>Plane mesh generation on all spline branches.   </li>
-<li>Node normal.  </li>
+<li>Node normal (Bend effect).  </li>
 <li>Node Scale (Taper effect).  </li>
+<li>Export mesh generated as a Unity prefab.  </li>
 </ul>
 <h2 id="inspector">Inspector</h2>
 <p><img src="../images/Inspector.png"
@@ -687,8 +688,8 @@ style="margin-left: 10px; width : 450px" />
 <td>Rotate the  plane mesh Uvs</td>
 </tr>
 <tr>
-<td>Export asset</td>
-<td>Export mesh to an asset file , the file can be found in "Assets/SMDExport"</td>
+<td>Export Prefab</td>
+<td>Export the Unity prefab.</td>
 </tr>
 </tbody>
 </table>
